--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,14 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/socket.io-client": "^3.0.0",
     "freeice": "^2.2.2",
+    "mobx": "^6.13.5",
+    "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
-    "socket.io-client": "^4.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
