--- a/server/config/example.env
+++ b/server/config/example.env
@@ -1,15 +1,24 @@
 # Общие настройки
 ENV=local
 
+# Настройки TALK
+TALK_HTTP_CLIENT_URL=http://localhost:3000
+
 # Настройки SSO
-SSO_URL=http://localhost:8080
+SSO_HTTP_SERVER_URL=http://localhost:8080
+SSO_HTTP_CLIENT_URL=http://localhost:3001
+SSO_GRPC_SERVER_URL=localhost:44044
+
+# Настройки HTTP
+HTTP_HOST=localhost
+HTTP_PORT=8091
 
 # Настройки WebSockets
 WEBSOCKET_PORT=8090
 
 # Настройки PostgreSQL
-POSTGRES_USER=chat-app
-POSTGRES_DATABASE=talk
-POSTGRES_PASSWORD=CHAT_APP
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5454
+POSTGRES_USER=chat-app
+POSTGRES_PASSWORD=CHAT_APP
+POSTGRES_DATABASE=talk
